# KudaUgodno-back

./: .env.example  .env.sample  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  dump.json  dump24_04.json  dump_24_04.json  dump_vzhuh_hotels_tours.json  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
all_fixture/: choices.py  fixture_views.py  pagination.py  views_fixture.py
all_fixture/errors/: list_error.py  mailings.py  serializers_error.py  views_descriptions.py  views_error.py
all_fixture/tests/: fixture_hotel.py  fixture_hotel_room.py  hotels_factories.py  test_temp_image.py
all_fixture/validators/: validators.py
applications/: admin.py  choices.py  models.py  models_application.py  serializers.py  serializers_applications.py  tests.py  tests_application.py  urls.py  validators.py  views.py  views_application.py
applications/fixtures/: flights.json  hotels.json  tours.json
applications/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_remove_applicationhotel_cancellation_insurance_and_more.py
applications/models/: models_application.py  models_guest.py
applications/serializers/: serializers_applications.py  serializers_guests.py
applications/tests/: test_guest.py  tests_application.py
applications/views/: views_application.py  views_guest.py
blogs/: admin.py  constants.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_article_options_and_more.py  0002_initial.py
calendars/: admin.py  models.py  serializers.py  urls.py  views.py
calendars/migrations/: 0001_initial.py  0002_calendardate_idx_calendardate_dates_and_more.py  0002_initial.py
config/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
docker/api/: Dockerfile
fixtures/: applications.json  users.json
flights/: choices.py  filters.py  models.py  serializers.py  tests.py  urls.py  validarors.py  views.py
flights/migrations/: 0001_initial.py  0002_alter_flight_flight_number.py  0003_alter_flight_options_alter_flight_arrival_airport_and_more.py
flights/validators/: validarors.py  validators.py
guests/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
guests/migrations/: 0001_initial.py  0002_initial.py  0003_alter_guest_date_born.py
hotels/: admin.py  choices.py  filters.py  models.py  serializers.py  serializers_type_of_meals.py  services.py  tests.py  urls.py  views.py
hotels/migrations/: 0001_initial.py  0002_alter_hotel_longitude_alter_hotel_user_rating_and_more.py  0002_remove_hotel_hotel_room_hotel_hotel_room.py  0002_remove_hotel_place_hotel_place.py  0003_alter_hotel_place.py  0003_alter_hotelroom_options_alter_hotel_check_in_time_and_more.py  0004_alter_hotel_check_in_time_alter_hotel_check_out_time.py
hotels/models/: models_hotel.py  models_hotel_amenity.py  models_hotel_meal.py  models_hotel_photo.py  models_room.py  models_room_amenity.py  models_room_caterogy.py  models_room_photo.py
hotels/serializers/: serializers_hotel.py  serializers_meal.py  serializers_room.py
hotels/tests/: test_factories_hotel.py  test_hotel.py  test_room.py  tests_hotel.py  tests_models.py  (+1 more)
insurances/: admin.py  models.py  serializers.py  urls.py  views.py
mailings/: models.py  serializers.py  urls.py  views.py
nginx/: nginx.conf
promocodes/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/: admin.py  filters.py  models.py  serializer_price_calendar.py  serializers.py  tests.py  urls.py  views.py  views_price_calendar.py
tours/: admin.py  choices.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/: admin.py  authentication.py  choices.py  managers.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
vzhuh/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
vzhuhs/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
(+86 files in other folders)
