[tool.poetry]
name = "36-kuda-ugodno-backend-api"
version = "0.3.0"
description = "API сервис для веб-сайта 'Куда Угодно'"
authors = ["Никита Шидогубов", "Анна Зылёва", "Евгений Кудряшов", "Андрей Гусельников"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
gunicorn = "^23.0.0"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.52"
celery = "^5.4.0"
redis = "^6.2.0"
django-celery-beat = "^2.8.1"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.6.0"
drf-yasg = "^1.21.8"
dj-rest-auth = "^7.0.1"
django-allauth = "^65.8.1"
social-auth-app-django = "^5.4.2"
djangorestframework-simplejwt = "^5.5.0"
django-filter = "^25.1"
django-autocomplete-light = "^3.12.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pre-commit = "^4.1.0"


[tool.poetry.group.test.dependencies]
factory-boy = "^3.3.3"
pytest-django = "^4.11.1"
pytest = "^8.4.1"

[tool.black]
line-length = 119
extend-exclude = "/migrations/"

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
skip = ["__init__.py", "**/migrations/*"]

[tool.flake8]
max-line-length = 119
exclude = ".git,__pycache__,poetry.lock,pyproject.toml,migrations,tests.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"